<resources>
    <string name="app_name">Weather App</string>
    <string name="default_search_text">Search ZIP Code</string>
    <string name="default_search_error">Error fetching weather details</string>
    <string name="empty_search_error">Please enter ZIP code</string>
</resources>