...
    ).build()
    val weatherData: WeatherData? = null
    var weatherResponse: WeatherResponse? = null
    private val weatherDao = database.weatherDao()
    fun addHardcodedZipCodesInQueue() {
        numberQueue.clear()
        numberQueue.add("02119")
    }

    fun getWeatherDataFromAPI(selectedZipCode: String): Observable<WeatherResponse> {
        return Observable.create { emitter ->
            try {
                val okHttpClient: OkHttpClient = OkHttpClient.Builder()
...
